<resources>
    <string name="app_name">WB Fitness</string>
    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>
    <string name="nav_header_title">Android Studio</string>
    <string name="nav_header_subtitle">android.studio@android.com</string>
    <string name="nav_header_desc">Navigation header</string>
    <string name="action_settings">Settings</string>
    <string name="nav_header_name">Navigation</string>
    <string name="nav_menu_title_home">Home</string>
    <string name="nav_menu_title_BMI">BMI</string>
    <string name="nav_menu_title_WorkoutPlan">Workout Plan</string>
    <string name="nav_menu_title_WorkoutTips">Workout Tips</string>
    <string name="nav_more_information">More Information</string>
    <string name="nav_menu_tilte_Contact">Contact</string>
    <string name="nav_menu_title_Credits">Credits</string>
    <string name="nav_language_refresh">Refresh Language</string>
    <string name="logoDescription">WB Fitness Logo</string>
    <string name="bmiButtonDescription">BMI Calculator Page</string>
    <string name="workoutPlanDescription">Workout Plan Page</string>
    <string name="contactPageDescription">Contact Page</string>
    <string name="workoutTipsDescription">Workout Tips Page</string>
    <string name="setupPageTitle">First Time Setup</string>
    <string name="name">Name</string>
    <string name="namePlaceholder">Obi-Wan Kenobi</string>
    <string name="gender">Gender</string>
    <string name="male">Male</string>
    <string name="female">Female</string>
    <string name="age">Age</string>
    <string name="height">Height</string>
    <string name="heightInches">Height In Inches</string>
    <string name="heightCentimeters">Height in Centimeters</string>
    <string name="heightPlaceholderInches">72</string>
    <string name="heightPlaceholderCentimeters">183</string>
    <string name="weight">Weight</string>
    <string name="weightPounds">Weight In Pounds</string>
    <string name="weightKG">Weight In Kilograms</string>
    <string name="weightPlaceholderPounds">240</string>
    <string name="weightPlaceholderKilograms">109</string>
    <string name="heightMeasurement">Height Measurement System</string>
    <string name="weightMeasurement">Weight Measurement System</string>
    <string name="pounds">Pounds</string>
    <string name="kilograms">Kilograms</string>
    <string name="inches">Inches</string>
    <string name="centimeters">Centimeters</string>
    <string name="submit">Submit</string>
    <string name="source">Source</string>
    <string name="complete">Complete</string>
    <string name="contact_title">You can review our website, SMS and Tel us, or you can
         Mail us and see our location
    </string>
    <string name="contact_email">
       Send  Email
    </string>
    <string name="contact_tel">
        Call telephone
    </string>
    <string name="contact_SMS">
        Send Message
    </string>
    <string name="contact_website">
      View Website
    </string>
    <string name="contact_location">
       View Location
    </string>
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="title_activity_settings">Settings</string>
    <string name="chest">Chest</string>
    <string name="core">Core</string>
    <string name="arms">Arms</string>
    <string name="legs">Legs</string>
    <string name="back">Back</string>
    <string name="cardio">Cardio</string>
    <string-array name="muscleGroups">
        <item>@string/chest</item>
        <item>@string/core</item>
        <item>@string/arms</item>
        <item>@string/legs</item>
        <item>@string/back</item>
        <item>@string/cardio</item>
    </string-array>
    <string name="bmi_menu_title">BMI Save Setting</string>
    <string name="bmi_title">Save Your BMI Input?</string>
    <string name="bmi_summary">Open toggle will save your BMI input</string>
    <string name="bmi_inputinvalid">Input invalid</string>
    <string name="language_key">language</string>
    <string name="language_value_english">1</string>
    <string name="language_value_madarin">0</string>
    <string name="language">Language</string>
    <string name="english">English</string>
    <string name="mandarin">Mandarin</string>
    <string name="language_menu_title">Language Settings</string>
    <string name="language_title">Chose Your Preferred Language</string>
    <string name="language_summary">You can choose English or Mandarin</string>
    <string-array name="language_entries">
        <item>@string/english</item>
        <item>@string/mandarin</item>
    </string-array>
    <string-array name="language_values">
        <item>@string/language_value_english</item>
        <item>@string/language_value_madarin</item>
    </string-array>
    <string name="bmi_calcuate_title">Body Mass Index Calculator </string>
    <string name="height_label">Inches</string>
    <string name="weight_lable">Ponds</string>
    <string name="bmi_label">BMI Value</string>
    <string name="calcualte_button">Calculate</string>
    <string name="bmi_evaluate">Your BMI is:</string>
    <string name="value_underweight">Underweight</string>
    <string name="value_overweight">OverWeight</string>
    <string name="value_nomal">Normal Weight</string>
    <string name="value_obesity">Obesity</string>
    <string name="bmi_defaultheight">0</string>
    <string name="bmi_defaultweight">0</string>
    <string name="bmi_defaultvalue">0</string>
    <string name="button_text">Calculate</string>
    <string name="value0">0</string>
    <string name="value10">10</string>
    <string name="value20">20</string>
    <string name="value30">30</string>
    <string name="textfieldbottom">Please Calculate</string>
    <string-array name="chestWorkoutTitles">
        <item>Pushups</item>
        <item>Dips</item>
        <item>Dumbbell Bench Press</item>
        <item>Dumbbell Flyes</item>
        <item>Standing Cable \n Chest Press</item>
    </string-array>
    <string-array name="chestWorkoutSets">
        <item>3 Sets \n 15 Repetitions</item>
        <item>3 Sets \n 10 Repetitions</item>
        <item>3 Sets \n 8 Repetitions</item>
        <item>3 Sets \n 8 Repetitions</item>
        <item>3 Sets \n 8 Repetitions</item>
    </string-array>
    <string-array name="chestWorkoutSources">
        <item>https://www.bodybuilding.com/exercises/pushups</item>
        <item>https://www.bodybuilding.com/exercises/dips-chest-version</item>
        <item>https://www.bodybuilding.com/exercises/dumbbell-bench-press</item>
        <item>https://www.bodybuilding.com/exercises/dumbbell-flyes</item>
        <item>https://www.bodybuilding.com/exercises/standing-cable-chest-press</item>
    </string-array>
</resources>