<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    tools:showIn="navigation_view">

    <group android:checkableBehavior="single">
        <item
            android:id="@+id/nav_home"
            android:icon="@drawable/ic_home_black_24dp"
            android:title="@string/nav_menu_title_home"/>

        <item
            android:id="@+id/nav_bmi"
            android:icon="@drawable/ic_bmi_black_24dp"
            android:title="@string/nav_menu_title_BMI" />
        <item
            android:id="@+id/nav_workoutplan"
            android:icon="@drawable/ic_plan_black_24dp"
            android:title="@string/nav_menu_title_WorkoutPlan" />
        <item
            android:id="@+id/nav_tips"
            android:icon="@drawable/ic_walk_black_24dp"
            android:title="@string/nav_menu_title_WorkoutTips" />
    </group>

    <item android:title="@string/nav_more_information">
        <menu>
            <item
                android:id="@+id/nav_contact"
                android:icon="@drawable/ic_contact__black_24dp"
                android:title="@string/nav_menu_tilte_Contact" />
            <item
                android:id="@+id/nav_credits"
                android:icon="@drawable/ic_credit_black_24dp"
                android:title="@string/nav_menu_title_Credits" />
        </menu>
    </item>

</menu>
