<?xml version="1.0" encoding="utf-8"?>

<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@drawable/bg">

    <android.support.constraint.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        tools:context=".SetupPage">


        <TextView
            android:id="@+id/setupAppName"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginStart="8dp"
            android:layout_marginTop="8dp"
            android:layout_weight="1"
            android:fontFamily="@font/bungee"
            android:gravity="center"
            android:text="@string/app_name"
            android:textAlignment="center"
            android:textColor="@android:color/black"
            android:textSize="@dimen/headerFontSize"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent" />

        <TextView
            android:id="@+id/setupTitle"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginStart="8dp"
            android:layout_marginTop="8dp"
            android:layout_marginEnd="8dp"
            android:layout_weight="1"
            android:fontFamily="@font/bungee"
            android:gravity="center"
            android:text="@string/setupPageTitle"
            android:textAlignment="center"
            android:textColor="@android:color/black"
            android:textSize="@dimen/headerFontSize"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/setupAppName" />

        <RadioGroup
            android:id="@+id/languageGroup"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:layout_marginStart="8dp"
            android:layout_marginTop="8dp"
            android:layout_marginEnd="8dp"
            android:layout_weight="1"
            android:gravity="center"
            android:orientation="horizontal"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/setupTitle">

            <RadioButton
                android:id="@+id/englishRadio"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_margin="15dp"
                android:layout_weight="0"
                android:fontFamily="@font/days_one"
                android:gravity="center"
                android:text="@string/english" />

            <RadioButton
                android:id="@+id/mandarinRadio"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_margin="15dp"
                android:layout_weight="0"
                android:fontFamily="@font/days_one"
                android:gravity="center"
                android:text="@string/mandarin" />

        </RadioGroup>

        <TextView
            android:id="@+id/nameTV"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginStart="8dp"
            android:layout_marginEnd="8dp"
            android:layout_weight="1"
            android:gravity="center"
            android:fontFamily="@font/days_one"
            android:textColor="@android:color/black"
            android:text="@string/name"
            android:textAlignment="center"
            android:textStyle="bold"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/languageGroup" />

        <EditText
            android:id="@+id/nameInput"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginStart="8dp"
            android:layout_marginTop="8dp"
            android:layout_marginEnd="8dp"
            android:layout_weight="1"
            android:ems="10"
            android:fontFamily="@font/days_one"
            android:gravity="center"
            android:hint="@string/name"
            android:inputType="textPersonName"
            android:text="@string/namePlaceholder"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/nameTV" />

        <RadioGroup
            android:id="@+id/genderGroup"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginStart="8dp"
            android:layout_marginEnd="8dp"
            android:layout_weight="1"
            android:checkedButton="@+id/maleRadio"
            android:gravity="center"
            android:orientation="horizontal"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/nameInput">

            <RadioButton
                android:id="@+id/maleRadio"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_margin="15dp"
                android:layout_weight="0"
                android:fontFamily="@font/days_one"
                android:gravity="center"
                android:text="@string/male" />

            <RadioButton
                android:id="@+id/femaleRadio"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_margin="15dp"
                android:layout_weight="0"
                android:fontFamily="@font/days_one"
                android:gravity="center"
                android:text="@string/female" />

        </RadioGroup>

        <RadioGroup
            android:id="@+id/heightGroup"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:layout_marginStart="8dp"
            android:layout_marginTop="8dp"
            android:layout_marginEnd="8dp"
            android:layout_weight="1"
            android:checkedButton="@+id/inchesRadio"
            android:gravity="center"
            android:orientation="horizontal"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/genderGroup">

            <RadioButton
                android:id="@+id/inchesRadio"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_margin="15dp"
                android:layout_weight="0"
                android:fontFamily="@font/days_one"
                android:gravity="center"
                android:text="@string/inches" />

            <RadioButton
                android:id="@+id/centimetersRadio"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_margin="15dp"
                android:layout_weight="0"
                android:fontFamily="@font/days_one"
                android:gravity="center"
                android:text="@string/centimeters" />

        </RadioGroup>

        <RadioGroup
            android:id="@+id/weightGroup"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:layout_marginStart="8dp"
            android:layout_marginTop="8dp"
            android:layout_marginEnd="8dp"
            android:layout_weight="1"
            android:checkedButton="@+id/poundsRadio"
            android:gravity="center"
            android:orientation="horizontal"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/heightGroup">

            <RadioButton
                android:id="@+id/poundsRadio"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_margin="15dp"
                android:layout_weight="0"
                android:fontFamily="@font/days_one"
                android:gravity="center"
                android:text="@string/pounds" />

            <RadioButton
                android:id="@+id/kgRadio"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_margin="15dp"
                android:layout_weight="0"
                android:fontFamily="@font/days_one"
                android:gravity="center"
                android:text="@string/kilograms" />

        </RadioGroup>

        <TableLayout
            android:id="@+id/tableLayout2"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="8dp"
            android:layout_marginTop="8dp"
            android:layout_marginEnd="8dp"
            android:layout_weight="1"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/weightGroup">

            <TableRow
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:layout_gravity="center">

                <TextView
                    android:id="@+id/heightTV"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_weight="1"
                    android:fontFamily="@font/days_one"
                    android:textColor="@android:color/black"
                    android:gravity="center"
                    android:text="@string/heightInches"
                    android:textStyle="bold" />

                <TextView
                    android:id="@+id/weightTV"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_weight="1"
                    android:fontFamily="@font/days_one"
                    android:gravity="center"
                    android:textColor="@android:color/black"
                    android:text="@string/weightPounds"
                    android:textStyle="bold" />
            </TableRow>

            <TableRow
                android:layout_width="match_parent"
                android:layout_height="match_parent">

                <EditText
                    android:id="@+id/heightInput"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_weight="1"
                    android:ems="10"
                    android:fontFamily="@font/days_one"
                    android:gravity="center"
                    android:inputType="number"
                    android:text="@string/heightPlaceholderInches" />

                <EditText
                    android:id="@+id/weightInput"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_weight="1"
                    android:ems="10"
                    android:fontFamily="@font/days_one"
                    android:gravity="center"
                    android:inputType="number"
                    android:text="@string/weightPlaceholderPounds" />
            </TableRow>

        </TableLayout>

        <Button
            android:id="@+id/setupSubmitButton"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginStart="8dp"
            android:layout_marginEnd="8dp"
            android:layout_weight="1"
            android:background="@drawable/source_button"
            android:fontFamily="@font/bungee"
            android:gravity="center"
            android:text="@string/submit"
            android:textAlignment="center"
            android:textColor="@android:color/black"
            android:textSize="30sp"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/tableLayout2" />

    </android.support.constraint.ConstraintLayout>

</ScrollView>